List.of fixes + skeleton remove